--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -24,7 +24,7 @@
     </div>
   </div>
 
-  <form class="formulario" th:action="@{/logincheck}" method="POST">
+  <form class="formulario" th:action="@{/login}" method="POST">
 
 
     <div class="form-group my-3">
