--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -12,7 +12,7 @@
 
 <div th:if="${error != null}" class="card text-white bg-danger mb-3 mensajeError" >
   <div class="card-body">
-    <h5 class="card-title">Error!</h5>
+    <h5 class="card-title">Los datos introducidos son incorrectos</h5>
     <p class="card-text" th:text="${error}"></p>
   </div>
 </div>
@@ -25,25 +25,23 @@
 
 <div class="container-fluid m-5 contenedor">
 
-  <form class="formulario" th:action="@{/registro}" method="POST">
+  <form class="formulario" th:action="@{/registrar}" method="POST" th:object="${usuario}">
 
 
     <div class="form-group my-3">
       <h3 class="card-title">Registrate!</h3>
     </div>
     <div class="form-group my-3">
-      <input type="text" class="form-control" name="nombre" placeholder="NOMBRE" th:value="${nombre}">
+      <input type="text" class="form-control" name="nombre" placeholder="NOMBRE" th:value="*{nombre}">
     </div>
     <div class="form-group my-3">
-      <input type="email" class="form-control" name="email" placeholder="EMAIL" th:value="${email}">
+      <input type="email" class="form-control" name="email" placeholder="EMAIL" th:value="*{email}">
     </div>
 
     <div class="form-group my-3">
-      <input type="password" class="form-control" name="password" placeholder="CONTRASEÑA" th:value="${password}">
+      <input type="password" class="form-control" name="password" placeholder="CONTRASEÑA" th:value="*{password}">
     </div>
-    <div class="form-group my-3">
-      <input type="password" class="form-control" name="password2" placeholder="REPETIR CONTRASEÑA" th:value="${password2}">
-    </div>
+
 
 
     <button type="submit" class="btn btn-primary mt-3 botones">Registrarme</button>
